# erp_creatio

./: .gitignore  README.md  descriptor.json1
Data/AccountingCurrencySysSetting/: data.json  descriptor.json
Data/Columns_setup/: data.json  descriptor.json
Data/CurrencyRateRatioSystemSetting/: data.json  descriptor.json
Data/CurrencyRateRatioValue/: data.json  descriptor.json
Data/DefaultSalaryPlanSysSetting/: data.json  descriptor.json
Data/Default_asset/: data.json  descriptor.json
Data/ErpStockLkp/: data.json  descriptor.json
Files/: Directory.Build.targets
install_db_triggers/: database_template.py  get_sys_setting.sql  pyproject.toml  requirements.txt  set_triggers.py
install_db_triggers/Money/: after.sql  before.sql  naming.sql  reregister.sql  triggers.sql
install_db_triggers/Receipt/: after.sql  before.sql  naming.sql  poduct_r_before.sql  product_r_after.sql  product_r_trigger.sql  reregister.sql  total.sql  triggers.sql
install_db_triggers/Registrators/: fund_registration.sql  mutual_registration.sql  profit_registration.sql  stock_registration.sql
install_db_triggers/Salary/: after.sql  before.sql  emp_after.sql  emp_before.sql  emp_triggers.sql  reregister.sql  triggers.sql
install_db_triggers/Sale/: after.sql  before.sql  before_delete.sql  delete_sale.sql  executors_after.sql  executors_before.sql  executors_triggers.sql  get_sale_totals.sql  product_after.sql  product_before.sql  product_trigger.sql  sale_naming.sql  sale_reregister.sql  triggers.sql  unregister.sql
install_db_triggers/currency_rates/: after.sql  triggers.sql
(+1271 files in other folders)
