[tool.poetry]
name = "install-db-triggers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "install_db_triggers"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
